--- a/src/App.css
+++ b/src/App.css
@@ -15,14 +15,29 @@
   height: 400px;
 }
 
+.topdiv{
+  width: 100%;
+  height: 64px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: grid;
+  grid-template-columns: 64px auto 85px;
+  column-gap: 2px;
+}
+
+
+.stack {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
 .button {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-body {
-  margin: 0px;
-  padding: 0px;
-  background: black;
-}
